# KYCPass

./: .env.example  .gitignore  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
contracts/kyc-disclosure/: Cargo.toml
contracts/kyc-disclosure/src/: lib.rs
contracts/kyc-disclosure/wit/: world.wit
docs/: AGENT-INTEGRATION.md  ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  DOCUMENT-SOURCES.md  HANDOVER.md  NORTHSTAR-SEPARATE-APP.md  PARTNER-INTEGRATION.md  SECURITY.md  SUBMISSION.md  TESTING.md
e2e/: public-flow.spec.ts
mcp/: kycpass-server.ts
scripts/: check-testnet.ts  deploy-contract.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/audit/: page.tsx
src/app/consent/: page.tsx
src/app/credentials/: page.tsx
src/app/dashboard/: page.tsx
src/app/docs/: page.tsx
src/app/northstar/: layout.tsx  page.tsx
src/app/onboarding/: page.tsx
src/app/receipt/: page.tsx
src/app/settings/: page.tsx
src/app/verifier/: page.tsx
src/components/: app-shell.tsx  page-header.tsx  partner-kyc-adapter.tsx  session-diagnostics.tsx  status-block.tsx
src/components/ui/: sonner.tsx
src/lib/: cors.test.ts  cors.ts  disclosure-policy.test.ts  disclosure-policy.ts  domain.test.ts  domain.ts  env.test.ts  env.ts  northstar.ts  partner-verification.test.ts  partner-verification.ts
src/lib/agent/: actions.test.ts  actions.ts  auth.test.ts  auth.ts  capabilities.ts  client.ts
src/lib/disclosure/: browser-execution.ts  server-execution.ts
src/lib/t3/: errors.ts  (+11 more)
src/store/: workflow-store.test.ts  workflow-store.ts
(+11 files in other folders)
